@@ -38,9 +38,6 @@
 #include "ns3/ipv6-l3-protocol.h"
 #include "ns3/icmpv6-l4-protocol.h"
 #include "ns3/udp-l4-protocol.h"
-#include "ns3/ipv6-static-routing.h"
-#include "ns3/ipv6-list-routing.h"
-#include "ns3/ipv6-list-routing-helper.h"
 #include "ns3/ripng.h"
 #include "ns3/ripng-helper.h"
 #include "ns3/node-container.h"
@@ -115,10 +112,8 @@ Ipv6RipngTest::DoRun (void)
   NodeContainer all (nodes, routers);
 
   RipNgHelper ripNgRouting;
-  Ipv6ListRoutingHelper listRH;
-  listRH.Add (ripNgRouting, 0);
   InternetStackHelper internetv6routers;
-  internetv6routers.SetRoutingHelper (listRH);
+  internetv6routers.SetRoutingHelper (ripNgRouting);
   internetv6routers.Install (routers);
 
   InternetStackHelper internetv6nodes;
@@ -326,10 +321,8 @@ Ipv6RipngCountToInfinityTest::DoRun (void)
   ripNgRouting.SetInterfaceMetric (routerB, 2, 10);
   ripNgRouting.SetInterfaceMetric (routerC, 1, 10);
 
-  Ipv6ListRoutingHelper listRH;
-  listRH.Add (ripNgRouting, 0);
   InternetStackHelper internetv6routers;
-  internetv6routers.SetRoutingHelper (listRH);
+  internetv6routers.SetRoutingHelper (ripNgRouting);
   internetv6routers.Install (routers);
 
   InternetStackHelper internetv6nodes;
@@ -543,10 +536,8 @@ Ipv6RipngSplitHorizonStrategyTest::DoRun (void)
   RipNgHelper ripNgRouting;
   ripNgRouting.Set ("SplitHorizon", EnumValue (m_setStrategy));
 
-  Ipv6ListRoutingHelper listRH;
-  listRH.Add (ripNgRouting, 0);
   InternetStackHelper internetv6routers;
-  internetv6routers.SetRoutingHelper (listRH);
+  internetv6routers.SetRoutingHelper (ripNgRouting);
   internetv6routers.Install (routers);
 
   InternetStackHelper internetv6nodes;
